--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 title: "notes"
 ---
 
-This is a Quarto website.
+This is a Quarto website used for various things, including collating notes for my CCNP ENARSI exam
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
