--- a/logging.qmd
+++ b/logging.qmd
@@ -3,11 +3,39 @@ title: "Logging"
 editor: visual
 ---
 
-# Logging
+# Syslog
 
-* 2 types of Debugging 
+#### General Notes
 
-## Heading 2 test
+- Used to manage system logs and alerts
+- Can be stored locally, sent to vty, console lines, or forwarded to an external syslog server
+- Logging levels:
+  - Emergency: 0  
+  - Alert: 1  
+  - Critical: 2  
+  - Error: 3  
+  - Warning: 4  
+  - Notice: 5  
+  - Informational: 6  
+  - Debug: 7
 
-Test 2
 ---
+
+#### Useful show commands
+
+- `show logging` — Shows information on local and external syslog
+
+---
+
+##### Standard Syslog Config
+
+```shell
+logging buffered 90000        # Increase local logging buffer size
+logging <logging-server>
+service timestamps debug datetime localtime show-timezone msec
+service timestamps log datetime localtime show-timezone msec
+logging trap warning         # includes this level of message and all lower levels
+logging source-interface loopback0
+exit
+!
+show logging
