--- a/logging.qmd
+++ b/logging.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Logging"
 editor: visual
+format: html
 ---
 
 # Syslog
@@ -32,7 +33,7 @@ editor: visual
 !
 show logging
 
-````
+```
 logging buffered 90000        # Increase local logging buffer size
 logging <logging-server>
 service timestamps debug datetime localtime show-timezone msec
@@ -40,4 +41,4 @@ service timestamps log datetime localtime show-timezone msec
 logging trap warning         # includes this level of message and all lower levels
 logging source-interface loopback0
 exit
-````
+```
