--- a/logging.qmd
+++ b/logging.qmd
@@ -11,14 +11,14 @@ format: html
 - Used to manage system logs and alerts
 - Can be stored locally, sent to vty, console lines, or forwarded to an external syslog server
 - Logging levels:
-  - Emergency: 0  
-  - Alert: 1  
-  - Critical: 2  
-  - Error: 3  
-  - Warning: 4  
-  - Notice: 5  
-  - Informational: 6  
-  - Debug: 7
+  - Emergency: **0**  
+  - Alert: **1** ** 
+  - Critical: **2**  
+  - Error: **3**  
+  - Warning: **4** 
+  - Notice: **5**
+  - Informational: **6**  
+  - Debug: **7**
 
 ---
 
