--- a/logging.qmd
+++ b/logging.qmd
@@ -12,7 +12,7 @@ format: html
 - Can be stored locally, sent to vty, console lines, or forwarded to an external syslog server
 - Logging levels:
   - Emergency: **0**  
-  - Alert: **1** ** 
+  - Alert: **1** 
   - Critical: **2**  
   - Error: **3**  
   - Warning: **4** 
