--- a/logging.qmd
+++ b/logging.qmd
@@ -8,29 +8,32 @@ format: html
 
 #### General Notes
 
-- Used to manage system logs and alerts
-- Can be stored locally, sent to vty, console lines, or forwarded to an external syslog server
-- Logging levels: (Every Awesome Cisco Engineer Will Need Icecream Daily )
-  - Emergency: **0**  
-  - Alert: **1** 
-  - Critical: **2**  
-  - Error: **3**  
-  - Warning: **4** 
-  - Notice: **5**
-  - Informational: **6**  
-  - Debug: **7**
+-   Used to manage system logs and alerts
 
----
+-   Can be stored locally, sent to vty, console lines, or forwarded to an external syslog server
+
+-   Logging levels: (Every Awesome Cisco Engineer Will Need Icecream Daily )
+
+    -   Emergency: **0**
+    -   Alert: **1**
+    -   Critical: **2**
+    -   Error: **3**
+    -   Warning: **4**
+    -   Notice: **5**
+    -   Informational: **6**
+    -   Debug: **7**
+
+------------------------------------------------------------------------
 
 #### Useful show commands
 
-- `show logging` — Shows information on local and external syslog
+-   `show logging` — Shows information on local and external syslog
 
----
+------------------------------------------------------------------------
 
 ##### Standard Syslog Config
 
-```default
+``` default
 logging buffered 90000        # Increase local logging buffer size
 logging <logging-server>
 service timestamps debug datetime localtime show-timezone msec
@@ -41,9 +44,22 @@ exit
 ```
 
 ##### Standard timestamp config
-```default
+
+``` default
 #service timestamps [debug|log] [datetime|uptime]
 
 *Datetime - includes date and time
 *Uptime - time elapsed since last reboot
 ```
+
+##### Conditional Debugging
+
+```default
+debug platform condition mac 1111.1111.1111                  ! this debugs based on the mac specified
+debug platform condition start                               ! starts conditional debugging
+!
+show platform condition                                      ! displays the current conditions set
+show debug
+```
+
+
