--- a/dhcp.qmd
+++ b/dhcp.qmd
@@ -4,7 +4,65 @@ editor: visual
 code-block-bg: dark
 ---
 
-``` {.abc style="color: red"}
+# DHCP
+
+-   DHCP used to dynamically address clients on a network.
+-   Clients Broadcast DHCPDISCOVER on local network.
+-   To operate outwith local subnet `ip helper-address x.x.x.x` on DG interface will forward DHCP messages towards DHCP server.
+    -   for IPv6 this is `ipv6 dhcp relay destination [ipv6-ip]`
+
+## DHCP Operation
+
+-   DORA
+
+    -   **Discover** - Client sends broadcast to discover DHCP servers on port **67**
+    -   **Offer** - DHCP Server responds, offers IP, SM, DG, DHCP Options (if configured) on port **68**
+    -   **Request** - Client request the offered IP details.
+    -   **Acknowledge** - DHCP server acknowledges clients request and records the details
+
+-   SARR
+
+    -   **Solicit** - Client sends this to locate DHCPv6 server, uses Multicast FFF02::1:2
+    -   **Advertise** - Servers respond to solicit message with a unicast advertise, offering addressing info
+    -   **Request** - Client sends request back to server, confirming address provided + other config
+    -   **Reply** - Server finalizes process with this message
+
+------------------------------------------------------------------------
+
+Useful show commands
+
+-   `show ip dhcp binding` ! shows current dhcp ip bindings
+-   `show ip dhcp pool` ! shows configured dhcp pool
+-   `show ip dhcp conflict` ! shows ip conflicts
+
+---
+
+Standard IPv4/IPv6 Configuration
+
+**IPv4**
+
+``` default
+ip dhcp excluded-address 10.8.8.1 10.8.8.10
+!
+ip dhcp pool POOL-A
+network 10.8.8.0 255.255.255.0
+default-router 10.8.8.1
+dns-server 192.168.1.1
+```
+
+**IPv6**
+
+``` default
+ipv6 dhcp pool DHCPV6POOL
+address prefix 2001:DB8:A:A::/64
+dns-server 2001:DB8:B:B::1
+domain-name cisco.com
+!
+interface GigabitEthernet0/0
+ipv6 dhcp server DHCPV6POOL ! required to advertise IPs in v6 unlike v4
+```
+
+``` default
 int g0/0
 ipv6 address autoconfig            ! Enables SLAAC on an interface
 ```
