--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,8 @@
 title: "notes"
 ---
 
-This is a Quarto website used for various things, including collating notes for my CCNP ENARSI exam
+This is a Quarto website used for various things, including collating notes for my CCNP ENARSI exam. 
+
+Idea and formatting borrowed from BrunB...
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
