--- a/eigrp.qmd
+++ b/eigrp.qmd
@@ -142,17 +142,23 @@ network 0.0.0.0 255.255.255.255      - Makes all interfaces participate in EIGRP
     ip hello-interval eigrp 10 3
     ip hold-interval eigrp 10 15
 
-moDERN
+---
+
+MODERN
 router eigrp [NAME]
  !
  address-family ipv4 unicast autonomous-system 1
   !
   af-interface default
    passive-interface                 - Sets all intefaces as passive.
+   ip hello-interval eigrp 10 3       - Can be here or af-interface section below
+   ip hold-interval eigrp 10 15
   exit-af-interface
   !
   af-interface GigabitEthernet0/1
    no passive-interface               - enables interface for EIGRP
+   ip hello-interval eigrp 10 3
+   ip hold-interval eigrp 10 15
   exit-af-interface
   !
   topology base
